# uvhow

./: .pre-commit-config.yaml  README.md  bump_version.py  pyproject.toml  test_detection.py
.github/workflows/: publish.yml  test-installations.yml  test.yml
src/uvhow/: __init__.py  __main__.py
