[project]
name = "uvhow"
version = "0.4.1"
description = "Detect how uv was installed and get upgrade instructions"
readme = "README.md"
authors = [
    { name = "Tim Hopper", email = "tim@tdhopper.com" }
]
requires-python = ">=3.8"
dependencies = []
keywords = ["uv", "package-manager", "cli", "upgrade"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Installation/Setup",
]

[project.scripts]
uvhow = "uvhow:main"

[build-system]
requires = ["uv_build>=0.8.0,<0.9"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "pytest-mock>=3.14.1",
]
